ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /app-api
  name: ingress-qms-node-app
  namespace: development
spec:
  tls:
  - hosts:
    - app-dev.qms888.com
    secretName: app-dev.qms888.com
  rules:
  - host: app-dev.qms888.com
    http:
      paths:
      - path: /app-node/
        backend:
          serviceName: qms-node
          servicePort: 80
